[fix] plugins structure, [seperate] buttons and button plugins

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             $('#typo').load('sample/_typo.html');
             $('#hgroup').load('sample/_hgroup.html');
             $('#form').load('sample/_form.html');
+            $('#button').load('sample/_btn.html');
             $('#table').load('sample/_table.html');
             $('#nav').load('sample/_nav.html');
             $('#colours').load('sample/_colours.html');
@@ -63,11 +64,12 @@
 <body lang="en">
     <div id="site" style="/* 30px height for top/bot bar */ margin:35px auto;">
 
-        <section id="grid"     class="textinnerc"        ></section>
+        <section id="grid"       ></section>
         <section id="typo"     class="overhide"          ></section>
         <section id="hgroup"   class="clearfix"          ></section>
         <section id="form"     ></section>
         <section id="table"    class="fullscale clearfix"></section>
+        <section id="button"    class=""></section>
         <section id="nav"      class="clearfix fullscale"></section>
         <section id="colours"  ></section>
 
