--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -1,30 +1,66 @@
-<section id="btn" class="clearfix">
-    <h2>buttons</h2>
-    <div class="col g2">
-        <div class="btn_cool">
-            <a href="#">.coolbtn</a>
-        </div>
-    </div>
-    <div class="col g2">
-        <div class="btn_pulse">just pulse it</div>
-    </div>
-    <div class="col g2">
-        <div class="g_btn">just pulse it</div>
-    </div>
-    <div class="col g2">
-
-    </div>
-    <div class="col g2">
-        <div class="btn">
-            <p><a href="#">.button</a></p>
-        </div>
-    </div>
-    <div class="col g2 last">
-        <div class="round">
-            <p>this is round coner</p>
-        </div>
-    </div>
-</section>
-
-<small><a href="#site">[top]</a></small>
+<h3>Buttons</h3>
 <hr />
+<button class="blue large">button</button>
+<button class="red large">button</button>
+<button class="green large">button</button>
+<button class="pink large">button</button>
+<button class="yellow large">button</button>
+<button class="orange large">button</button>
+<button class="purple large">button</button>
+<button class="blue large">button</button>
+<button class="yellow bigger">button</button>
+<button class="green big">button</button>
+<button class="orange strong">button</button>
+<button class="pink small">button</button>
+<button class="small red">button</button>
+<button class="bgrey2">button</button> <br />
+<button class="pill blue big">button</button>
+<button class="pill primary">button</button> <br />
+<button class="primary">primary</button>
+
+<h5>plugins</h5>
+<hr />
+<h6>hex</h6>
+<button class="hex">default</button>
+<button class="hex play"    >playing</button>
+<button class="hex add"     >add</button>
+<button class="hex edit"    >edit</button>
+<button class="hex delete"  >delete</button>
+<button class="hex save"    >save</button>
+<button class="hex email"   >email</button>
+<button class="hex like"    >like</button>
+<button class="hex next"    >next</button>
+<button class="hex star"    >star</button>
+<button class="hex one"     >one</button>
+<button class="hex two"     >two</button>
+<button class="hex three"   >three</button>
+<button class="hex four"    >four</button>
+<button class="hex five"    >five</button>
+<button class="hex six"     >six</button>
+<button class="hex seven"   >seven</button>
+<button class="hex eight"   >eight</button>
+<button class="hex nine"    >nine</button>
+<button class="hex ten"     >ten</button>
+<button class="hex moon"    >moon</button>
+<button class="hex kill"    >kill</button>
+<button class="hex smile"   >smile</button>
+<button class="hex flower"  >flower</button>
+<button class="hex plane"   >plane</button>
+<button class="hex phone"   >phone</button>
+<button class="hex win"     >win</button>
+<button class="hex dice"    >dice</button>
+<button class="hex anchor"  >anchor</button>
+<button class="hex recycle" >recycle</button>
+<button class="hex work"    >work</button>
+<button class="hex gear"    >gear</button>
+<button class="hex coffee"  >coffee</button>
+<button class="hex warn"    >warn</button>
+<button class="hex music"   >music</button>
+<button class="hex harzard" >harzard</button>
+<button class="hex cloud"   >playing</button>
+<button class="hex rainy"   >rainy</button>
+
+<h6>bright</h6>
+<button class="sky">sky</button>
+<button class="lime">lime</button>
+<button class="pill lime">button</button>
