--- a/sample/_typo.html
+++ b/sample/_typo.html
@@ -41,10 +41,17 @@
     </div>
     <div class="g7 col">
         <p>Vestibulum sit amet eros eros, ac eleifend elit. Nunc volutpat urna non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. Non dui pulvinar quis mattis nisl eleifend. In ornare enim eget nisi congue tempor ut eget orci. </p>
-        <pre>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</pre>
+        <pre>Lorem 
+        ipsum dolor sit amet, consectetuer adipiscing elit. Nullam
+        -- convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit
+         amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</pre>
         <div class="row">
             <div class="g6 col">
-                <pre><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</p></pre>
+<pre><p>Lorem ipsum dolor sit amet, 
+
+consectetuer adipiscing elit. Nullam dignissim convallis est. 
+
+        ** Quisque aliquam suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</p></pre>
             </div>
             <div class="g6 col last">
                 <p>Lorem <sup>superscript</sup> dolor <sub>subscript</sub> amet, consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. <cite>cite</cite>. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at.<acronym title="National Basketball Association">NBA</acronym> Mauris a ante. Suspendisse quam sem,<abbr title="Avenue">AVE</abbr></p>
