--- a/sample/_grid.html
+++ b/sample/_grid.html
@@ -1,107 +1,109 @@
 <h3>Grids</h3>
-<p style="text-align:left;"><strong>Total freedom</strong>, it is a fluid grid with auto calculation, define your own gutter width and number of columns (maximun 16, no minimun).</p>
+<p style="text-align:left;"><strong>Total freedom</strong>, a fluid grid with auto calculation, define your own gutter width and number of columns (max 16, default 12). </p>
 <hr />
 <!-- pushes -->
-<div class="row clearfix">
-    <div class="g1 col bgrey1">1</div>
-    <div class="g11 col backblue last">11</div>
-</div>
-<div class="row clearfix">
-    <div class="p1 g1 col bgrey1">2</div>
-    <div class="g10 col backblue last">10</div>
-</div>
-<div class="row clearfix">
-    <div class="p2 g1 col bgrey1">3</div>
-    <div class="g9 col backblue last">9</div>
-</div>
-<div class="row clearfix">
-    <div class="p3 g1 col bgrey1">4</div>
-    <div class="g8 col backblue last">8</div>
-</div>
-<div class="row clearfix">
-    <div class="p4 g1 col bgrey1">5</div>
-    <div class="g7 col backblue last">7</div>
-</div>
-<div class="row clearfix">
-    <div class="p5 g1 col bgrey1">6</div>
-    <div class="g6 col backblue last">6</div>
-</div>
-<div class="row clearfix">
-    <div class="p6 g1 col bgrey1">7</div>
-    <div class="g5 col backblue last">5</div>
-</div>
-<div class="row clearfix">
-    <div class="p7 g1 col bgrey1">8</div>
-    <div class="g4 col backblue last">4</div>
-</div>
-<div class="row clearfix">
-    <div class="p8 g1 col bgrey1">9</div>
-    <div class="g3 col backblue last">3</div>
-</div>
-<div class="row clearfix">
-    <div class="p9 g1 col bgrey1">10</div>
-    <div class="g2 col backblue last">2</div>
-</div>
-<div class="row clearfix">
-    <div class="p10 g1 col bgrey1">11</div>
-    <div class="g1 col backblue last">1</div>
-</div>
-<div class="row clearfix">
-    <div class="p11 g1 col bgrey1">12</div>
-</div>
+<div class="textc">
+    <div class="row clearfix">
+        <div class="g1 col bgrey1">1</div>
+        <div class="g11 col backblue last">11</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p1 g1 col bgrey1">2</div>
+        <div class="g10 col backblue last">10</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p2 g1 col bgrey1">3</div>
+        <div class="g9 col backblue last">9</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p3 g1 col bgrey1">4</div>
+        <div class="g8 col backblue last">8</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p4 g1 col bgrey1">5</div>
+        <div class="g7 col backblue last">7</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p5 g1 col bgrey1">6</div>
+        <div class="g6 col backblue last">6</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p6 g1 col bgrey1">7</div>
+        <div class="g5 col backblue last">5</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p7 g1 col bgrey1">8</div>
+        <div class="g4 col backblue last">4</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p8 g1 col bgrey1">9</div>
+        <div class="g3 col backblue last">3</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p9 g1 col bgrey1">10</div>
+        <div class="g2 col backblue last">2</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p10 g1 col bgrey1">11</div>
+        <div class="g1 col backblue last">1</div>
+    </div>
+    <div class="row clearfix">
+        <div class="p11 g1 col bgrey1">12</div>
+    </div>
 
-<!-- 12 * g1 -->
-<div class="row clearfix">
-    <div class="g1 col bgrey1">1</div>
-    <div class="g1 col bgrey1">2</div>
-    <div class="g1 col bgrey1">3</div>
-    <div class="g1 col bgrey1">4</div>
-    <div class="g1 col bgrey1">5</div>
-    <div class="g1 col bgrey1">6</div>
-    <div class="g1 col bgrey1">7</div>
-    <div class="g1 col bgrey1">8</div>
-    <div class="g1 col bgrey1">9</div>
-    <div class="g1 col bgrey1">10</div>
-    <div class="g1 col bgrey1">11</div>
-    <div class="g1 col last bgrey1">12</div>
-</div>
-
-
-<!-- 6 * g2 -->
-<div class="row clearfix">
-    <div class="g2 col bgrey1">1</div>
-    <div class="g2 col bgrey1">2</div>
-    <div class="g2 col bgrey1">3</div>
-    <div class="g2 col bgrey1">4</div>
-    <div class="g2 col bgrey1">5</div>
-    <div class="g2 col bgrey1 last">6</div>
-</div>
+    <!-- 12 * g1 -->
+    <div class="row clearfix">
+        <div class="g1 col bgrey1">1</div>
+        <div class="g1 col bgrey1">2</div>
+        <div class="g1 col bgrey1">3</div>
+        <div class="g1 col bgrey1">4</div>
+        <div class="g1 col bgrey1">5</div>
+        <div class="g1 col bgrey1">6</div>
+        <div class="g1 col bgrey1">7</div>
+        <div class="g1 col bgrey1">8</div>
+        <div class="g1 col bgrey1">9</div>
+        <div class="g1 col bgrey1">10</div>
+        <div class="g1 col bgrey1">11</div>
+        <div class="g1 col last bgrey1">12</div>
+    </div>
 
 
-<!-- 4 * g3 -->
-<div class="row clearfix">
-    <div class="g3 col bgrey1">1</div>
-    <div class="g3 col bgrey1">2</div>
-    <div class="g3 col bgrey1">3</div>
-    <div class="g3 col bgrey1 last">4</div>
-</div>
+    <!-- 6 * g2 -->
+    <div class="row clearfix">
+        <div class="g2 col bgrey1">1</div>
+        <div class="g2 col bgrey1">2</div>
+        <div class="g2 col bgrey1">3</div>
+        <div class="g2 col bgrey1">4</div>
+        <div class="g2 col bgrey1">5</div>
+        <div class="g2 col bgrey1 last">6</div>
+    </div>
 
 
-<!-- 3 * g4 -->
-<div class="row clearfix">
-    <div class="g4 col bgrey1">1</div>
-    <div class="g4 col bgrey1">2</div>
-    <div class="g4 col bgrey1 last">3</div>
-</div>
-
-<!-- 2 * g6 -->
-<div class="row clearfix">
-    <div class="g6 col bgrey1">1</div>
-    <div class="g6 col bgrey1 last">1</div>
-</div>
+    <!-- 4 * g3 -->
+    <div class="row clearfix">
+        <div class="g3 col bgrey1">1</div>
+        <div class="g3 col bgrey1">2</div>
+        <div class="g3 col bgrey1">3</div>
+        <div class="g3 col bgrey1 last">4</div>
+    </div>
 
 
-<!-- 1 * g12 -->
-<div class="row clearfix">
-    <div class="g12 col bgrey1 last">1</div>
+    <!-- 3 * g4 -->
+    <div class="row clearfix">
+        <div class="g4 col bgrey1">1</div>
+        <div class="g4 col bgrey1">2</div>
+        <div class="g4 col bgrey1 last">3</div>
+    </div>
+
+    <!-- 2 * g6 -->
+    <div class="row clearfix">
+        <div class="g6 col bgrey1">1</div>
+        <div class="g6 col bgrey1 last">1</div>
+    </div>
+
+
+    <!-- 1 * g12 -->
+    <div class="row clearfix">
+        <div class="g12 col bgrey1 last">1</div>
+    </div>
 </div>
