renamed button plugin bright to pulse

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -21,7 +21,7 @@
 <h5>plugins</h5>
 <hr />
 <h6>hex</h6>
-<button class="hex">default</button>
+<button class="hex primary">default</button>
 <button class="hex play"    >playing</button>
 <button class="hex add"     >add</button>
 <button class="hex edit"    >edit</button>
