[add] pill effect to hex buttons

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -26,10 +26,11 @@ default | .green |
 .yellow | .blue  |      sample to create your own .hex.blue { @co1:#048cdb; @co2:#0064cd; #hex > .button(@co1, @co2); }
 .red    | .dark  |      always begin with .hex.(color name) { @co1:colour top, @co2: color bottom; mixing will work by itself} </code></pre>
 <button class="hex">default</button>
+<button class="hex pill">default</button>
 <button class="hex dark">default</button>
 <button class="hex yellow">default</button>
 <button class="hex blue">default</button>
-<button class="hex play blue"    >playing</button>
+<button class="hex play blue pill"    >playing</button>
 <button class="hex work green"    >five</button>
 <button class="hex kill yellow"    >playing</button>
 <button class="hex phone red"   >phone</button>
