[add] sexy buttons plugin, [fix] consistency of #shadow >  mixing for text-shadow

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -76,3 +76,9 @@ default | .green |
 <button class="sky">sky</button>
 <button class="lime">lime</button>
 <button class="pill lime">button</button>
+
+<h6>sexy</h6>
+<button class="sexy">sky</button>
+<button class="sexy">lime</button>
+<button class="sexy">button</button>
+
