[fix] sexy button mixing, [todo] hover effect need to be more dynamic

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -15,8 +15,6 @@
 <button class="small red">button</button>
 <button class="bgrey2">button</button> <br />
 <button class="pill blue big">button</button>
-<button class="pill primary">button</button> <br />
-<button class="primary">primary</button>
 
 <h5>plugins</h5>
 <hr />
@@ -78,7 +76,7 @@ default | .green |
 <button class="pill lime">button</button>
 
 <h6>sexy</h6>
-<button class="sexy">sky</button>
-<button class="sexy">lime</button>
-<button class="sexy">button</button>
+<button class="sexy">default sexy</button>
+<button class="sexy green">green</button>
+<button class="sexy">some button</button>
 
