--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             $('#table').load('sample/_table.html');
             $('#nav').load('sample/_nav.html');
             $('#colours').load('sample/_colours.html');
+            $('#plugin').load('sample/_plugins.html');
         });
     </script>
     <script src="js/script.js"></script>
@@ -64,14 +65,15 @@
 <body lang="en">
     <div id="site" style="/* 30px height for top/bot bar */ margin:35px auto;">
 
-        <section id="grid"       ></section>
-        <section id="typo"     class="overhide"          ></section>
-        <section id="hgroup"   class="clearfix"          ></section>
+        <section id="grid"     ></section>
+        <section id="typo"     class="overhide"            ></section>
+        <section id="hgroup"   class="clearfix"            ></section>
         <section id="form"     ></section>
-        <section id="table"    class="fullscale clearfix"></section>
-        <section id="button"    class=""></section>
-        <section id="nav"      class="clearfix fullscale"></section>
+        <section id="table"    class="fullscale clearfix"  ></section>
+        <section id="button"   class=""                    ></section>
+        <section id="nav"      class="clearfix fullscale"  ></section>
         <section id="colours"  ></section>
+        <section id="plugin"   ></section>
 
     </div><!--/site-->
 </html>
