--- a/sample/_form.html
+++ b/sample/_form.html
@@ -128,3 +128,49 @@
     </form>
     <div class="clear"></div>
 </div>
+
+<br />
+<h5>Plugin</h5>
+<hr />
+<h6>sexyform</h6>
+<div class="row">
+    <fieldset class="col g6 sexyform">
+        <input type="text" id="text_field" placeholder="name" />
+        <input type="password" placeholder="password" name="password" />
+        <input type="email" id="text_field" placeholder="email" />
+        <input type="password" class="error" placeholder="password" name="password" />
+        <input type="password" class="success" placeholder="password" name="password" />
+        <textarea id="text_area" placeholder="Write it here"></textarea>
+
+
+        <input type="file" class="file" name="file" />
+
+        <p> <input type="submit" value="Submit" /> <input type="reset" value="Clear" /> </p>
+    </fieldset>
+    <legend class="col g6 last sexyform">
+        <select name="select_element">
+            <optgroup label="Option Group 1">
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+            </optgroup>
+            <optgroup label="Option Group 2">
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+            </optgroup>
+        </select>
+    
+        <p><label for="radio_buttons">Radio Buttons:</label>
+        <input type="radio" class="radio" name="radio_button" value="radio_1" /> Radio 1<br/>
+        <input type="radio" class="radio" name="radio_button" value="radio_2" /> Radio 2<br/>
+        <input type="radio" class="radio" name="radio_button" value="radio_3" /> Radio 3<br/>
+        </p>
+    
+        <p><label for="checkboxes">Checkboxes:</label>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_1" /> Radio 1<br/>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_2" /> Radio 2<br/>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_3" /> Radio 3<br/>
+        </p>
+    </legend>
+</div>
