[fix] alert block, [add] help block, [update] sexy form input

--- a/sample/_form.html
+++ b/sample/_form.html
@@ -56,6 +56,7 @@
     <div class="alert error"><strong>.alert.error + .action</strong> It seems you are not a premium member, would you like to try out our 30Days free trial! its easy, just connect with your google account are you are In
         <div class="action"><input type="button" name="submit" value="Ok"/> <input type="button" name="cancel" value="Cancel"/></div>
     </div>
+    <p class="help"><strong>.help</strong> this is a help block.</p>
 </aside>
 <div class="row alert info">
     <div class="col g12 last clearfix">
@@ -142,10 +143,9 @@
         <input type="password" class="success" placeholder="password" name="password" />
         <textarea id="text_area" placeholder="Write it here"></textarea>
 
-
         <input type="file" class="file" name="file" />
 
-        <p> <input type="submit" value="Submit" /> <input type="reset" value="Clear" /> </p>
+        <p> <button type="submit">Submit</button> <button type="reset" class="hex delete">Clear</button> </p>
     </fieldset>
     <legend class="col g6 last sexyform">
         <select name="select_element">
