[add] plugin quillform

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -23,6 +23,9 @@
 default | .green |
 .yellow | .blue  |      sample to create your own .hex.blue { @co1:#048cdb; @co2:#0064cd; #hex > .button(@co1, @co2); }
 .red    | .dark  |      always begin with .hex.(color name) { @co1:colour top, @co2: color bottom; mixing will work by itself} </code></pre>
+
+<style> button.hex {min-width:120px;} </style>
+
 <button class="hex">default</button>
 <button class="hex pill">default</button>
 <button class="hex dark">default</button>
