--- a/sample/_form.html
+++ b/sample/_form.html
@@ -54,9 +54,9 @@
     <div class="alert notice"><strong>.alert.notice</strong> New anoucement just arrived</div>
     <div class="alert info"><strong>.alert.info</strong> ya thats right </div>
     <div class="alert error"><strong>.alert.error + .action</strong> It seems you are not a premium member, would you like to try out our 30Days free trial! its easy, just connect with your google account are you are In
-        <div class="action"><input type="button" name="submit" value="Ok"/> <input type="button" name="cancel" value="Cancel"/></div>
+        <div class="action"><input type="button" name="submit" class="hex" value="Ok"/> <input type="button" name="cancel" value="Cancel"/></div>
     </div>
-    <p class="help"><strong>.help</strong> this is a help block.</p>
+    <p class="help"><strong>.help:</strong> this is a help block.</p>
 </aside>
 <div class="row alert info">
     <div class="col g12 last clearfix">
@@ -133,8 +133,8 @@
 <br />
 <h5>Plugin</h5>
 <hr />
-<h6>sexyform</h6>
 <div class="row">
+<h6>sexyform</h6>
     <fieldset class="col g6 sexyform">
         <input type="text" id="text_field" placeholder="name" />
         <input type="password" placeholder="password" name="password" />
@@ -173,4 +173,70 @@
         <input type="checkbox" class="checkbox" name="checkboxes" value="check_3" /> Radio 3<br/>
         </p>
     </legend>
+</div>
+
+<div class="row">
+<h6>quillform</h6>
+    <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+    <fieldset class="col g6 quillform">
+
+        <p>
+            <label for="text_field">Text Field:</label>
+            <input type="text" id="text_field" />
+        </p>
+
+        <p>
+            <label for="text_area" rows="1">Text Area:</label>
+            <textarea id="text_area"></textarea>
+        </p>
+
+        <p>
+            <label for="password">Password:</label>
+            <input type="password" class="password" name="password" />
+        </p>
+
+        <p>
+            <label for="password">Password:</label>
+            <input type="password" class="password error" name="password" />
+        </p>
+
+        <p>
+            <label for="password">Password:</label>
+            <input type="password" class="password success" name="password" />
+        </p>
+
+        <label for="file">File Input:</label>
+        <input type="file" class="file" name="file" />
+
+        <p><input class="button" type="reset" value="Clear" /> <input class="button" type="submit" value="Submit" /></p>
+    </fieldset>
+    <fieldset class="col g6 last quillform">
+        <p>
+                <label for="something">Label:</label>
+                <select name="select_element">
+                    <optgroup label="Option Group 1">
+                        <option value="1">Option 1</option>
+                        <option value="2">Option 2</option>
+                        <option value="3">Option 3</option>
+                    </optgroup>
+                    <optgroup label="Option Group 2">
+                        <option value="1">Option 1</option>
+                        <option value="2">Option 2</option>
+                        <option value="3">Option 3</option>
+                    </optgroup>
+                </select>
+        </p>
+    
+        <p>
+            <input type="radio" class="radio" name="radio_button" value="radio_1" /> Radio 1<br/>
+            <input type="radio" class="radio" name="radio_button" value="radio_2" /> Radio 2<br/>
+            <input type="radio" class="radio" name="radio_button" value="radio_3" /> Radio 3<br/>
+        </p>
+    
+        <p>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_1" /> Radio 1<br/>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_2" /> Radio 2<br/>
+        <input type="checkbox" class="checkbox" name="checkboxes" value="check_3" /> Radio 3<br/>
+        </p>
+    </fieldset>
 </div>
