--- a/sample/_typo.html
+++ b/sample/_typo.html
@@ -8,12 +8,12 @@
         <p>All font size will transform from px to em, and recalculate its margin and padding</p>
         <h5>Classes</h5>
         <li>.gigantic</li>
-        <li>h1, .huge</li>
-        <li>h2, .large</li>
-        <li>h3, .bigger</li>
-        <li>h4, .big</li>
-        <li>h5, .strong</li>
-        <li>h6, .small, p</li>
+        <li>h1, .h1</li>
+        <li>h2, .h2</li>
+        <li>h3, .h3</li>
+        <li>h4, .h4</li>
+        <li>h5, .h5</li>
+        <li>h6, .h6, p</li>
     </div>
 </div>
 <div class="col g5">
@@ -32,7 +32,7 @@
     <h5>H5<small>small</small></h5>
     <h6>H6<small>small</small></h6>
 </div>
-<div class="row"><h1 class="gigantic">.gigantic</h1></div>
+<div class="row"><h1 class="huge">.huge</h1></div>
 <br />
 <div class="row justify">
     <div class="g3 col">
