--- a/sample/_table.html
+++ b/sample/_table.html
@@ -3,7 +3,7 @@
 <hr />
 <div class="row">
     <div class="col g6">
-        <table>
+        <table class="line">
             <caption>caption</caption>
             <tr>
                 <th>THeader 1</th><th>THeader 2</th><th>THeader 3</th>
