--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         });
     </script>
     <script src="js/script.js"></script>
+    <script src="js/ie.js"></script>
 </head>
 
 <body lang="en">
