update respond.js if ie

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         });
     </script>
     <script src="js/script.js"></script>
-    <script src="js/ie.js"></script>
+    <!--[if lte IE 9]>
+        <script src="js/ie.js"></script>
+    <![endif]-->
 </head>
 
 <body lang="en">
