update forms and tables

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <script src="js/script.js"></script>
     <!--[if lte IE 9]>
         <script src="js/ie.js"></script>
+        <link rel="stylesheet" media="all" href="css/_ie.css"/>
     <![endif]-->
 </head>
 
