--- a/sample/_table.html
+++ b/sample/_table.html
@@ -2,6 +2,25 @@
 <p><strong>Less is more!</strong> simple table formatting</p>
 <hr />
 <div class="row">
+    <div class="col g12">
+        <table>
+            <caption>caption</caption>
+            <tr>
+                <th>THeader  1</th><th>THeader 2</th><th>THeader 3</th><th>THeader 4</th><th>THeader 5</th>
+            </tr>
+            <tr>
+                <td>Division 1</td><td>Division 2</td><td>Division 3</td><td>Division 4</td><td>Division 5</td>
+            </tr>
+            <tr>
+                <td>Division 1</td><td>Division 2</td><td>Division 3</td><td>Division 4</td><td>Division 5</td>
+            </tr>
+            <tr>
+                <td>Division 1</td><td>Division 2</td><td>Division 3</td><td>Division 4</td><td>Division 5</td>
+            </tr>
+        </table>
+    </div>
+</div>
+<div class="row">
     <div class="col g6">
         <table class="line">
             <caption>caption</caption>
