add new buttons

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -83,3 +83,12 @@ default | .green |
 <button class="sexy green">green</button>
 <button class="sexy">some button</button>
 
+<h6>drib</h6>
+<button class="drib">default sexy</button>
+<button class="drib">green</button>
+<button class="drib">some button</button>
+
+<h6>push</h6>
+<button class="punch">default sexy</button>
+<button class="punch">green</button>
+<button class="punch">some button</button>
