update to sample

--- a/sample/_form.html
+++ b/sample/_form.html
@@ -13,7 +13,7 @@
             <textarea id="text_area"></textarea>
     
             <label for="password">Password:</label>
-            <input type="password" class="password" name="password" />
+            <input type="password" name="password" />
     
             <label for="file">File Input:</label>
             <input type="file" class="file" name="file" />
@@ -38,9 +38,9 @@
         </select>
 
         <p><label for="radio_buttons">Radio Buttons:</label>
-        <input type="radio" class="radio" name="radio_button" value="radio_1" /> Radio 1<br/>
-        <input type="radio" class="radio" name="radio_button" value="radio_2" /> Radio 2<br/>
-        <input type="radio" class="radio" name="radio_button" value="radio_3" /> Radio 3<br/>
+        <label><input type="radio" class="radio" name="radio_button" value="radio_1" /> Radio 1</label>
+        <label><input type="radio" class="radio" name="radio_button" value="radio_2" /> Radio 2</label>
+        <label><input type="radio" class="radio" name="radio_button" value="radio_3" /> Radio 3</label>
         </p>
 
         <p><label for="checkboxes">Checkboxes:</label>
