--- a/sample/_grid.html
+++ b/sample/_grid.html
@@ -90,15 +90,15 @@
 
     <!-- 3 * g4 -->
     <div class="row clearfix">
-        <div class="g4 third col bgrey1">1</div>
-        <div class="g4 third col bgrey1">2</div>
-        <div class="g4 third col bgrey1 last">3</div>
+        <div class="g4 device-third col bgrey1">1</div>
+        <div class="g4 device-third col bgrey1">2</div>
+        <div class="g4 device-third-last col bgrey1 last">3</div>
     </div>
 
     <!-- 2 * g6 -->
     <div class="row clearfix">
-        <div class="g6 half col bgrey1">1</div>
-        <div class="g6 half col bgrey1 last">1</div>
+        <div class="g6 device-half col bgrey1">1</div>
+        <div class="g6 device-half-last col bgrey1 last">1</div>
     </div>
 
 
