--- a/sample/_nav.html
+++ b/sample/_nav.html
@@ -33,7 +33,19 @@
     </div>
 </div> <!-- end row middle -->
 
-<div class="topbar dark">
+<div class="topbar dark device-show">
+    <ul>
+        <li><a href="#grid">Grids</a></li>
+        <li><a href="#typo">Typography</a></li>
+        <li><a href="#hgroup">Hgroups</a></li>
+        <li><a href="#form">Forms</a></li>
+        <li><a href="#table">Tables</a></li>
+        <li><a href="#nav">Navigations</a></li>
+        <li><a href="#colours">Colours</a></li>
+    </ul>
+</div>
+
+<div class="topbar dark device-hide">
     <a href="#"><h5>topbar.dark</h5></a>
     <span>
         <a href="#">Menu</a>
