--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <link rel="stylesheet" media="all" href="css/style.css"/>
+    <link rel="stylesheet" media="all" href="css/dev.css"/>
 
     <!-- jquery cdn and fallback -->
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>-->
@@ -48,15 +49,15 @@
 
     <script language="javascript" type="text/javascript">
         $(document).ready(function() {
-            $('#grid').load('sample/_grid.html');
+            //$('#grid').load('sample/_grid.html');
             $('#typo').load('sample/_typo.html');
-            $('#hgroup').load('sample/_hgroup.html');
+            //$('#hgroup').load('sample/_hgroup.html');
             $('#form').load('sample/_form.html');
             $('#button').load('sample/_btn.html');
-            $('#table').load('sample/_table.html');
-            $('#nav').load('sample/_nav.html');
-            $('#colours').load('sample/_colours.html');
-            $('#plugin').load('sample/_plugins.html');
+            //$('#table').load('sample/_table.html');
+            //$('#nav').load('sample/_nav.html');
+            //$('#colours').load('sample/_colours.html');
+            //$('#plugin').load('sample/_plugins.html');
         });
     </script>
     <script src="js/script.js"></script>
