--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -15,6 +15,7 @@
 <button class="small red">button</button>
 <button class="bgrey2">button</button> <br />
 <button class="pill blue big">button</button>
+<button disabled="disabled">disabled</button>
 
 <h5>plugins</h5>
 <hr />
@@ -89,6 +90,15 @@ default | .green |
 <button class="drib">some button</button>
 
 <h6>push</h6>
-<button class="punch">default sexy</button>
-<button class="punch">green</button>
-<button class="punch">some button</button>
+<button class="push">default sexy</button>
+<button class="push">green</button>
+
+<h6>slick</h6>
+<button class="slim">default sexy</button>
+<button class="slim">green</button>
+<button class="slim" disabled="disabled">disabled</button>
+
+<h6>minimal-indent</h6>
+<button class="minimal-indent">default sexy</button>
+<button class="minimal-indent">green</button>
+<button class="minimal-indent">some button</button>
