organised file structure

--- a/sample/_btn.html
+++ b/sample/_btn.html
@@ -13,7 +13,7 @@
 <button class="orange strong">button</button>
 <button class="pink small">button</button>
 <button class="small red">button</button>
-<button class="bgrey2">button</button> <br />
+<button class="bgrey2 strong">button</button> <br />
 <button class="pill blue big">button</button>
 <button disabled="disabled">disabled</button>
 
@@ -99,6 +99,6 @@ default | .green |
 <button class="slim" disabled="disabled">disabled</button>
 
 <h6>minimal-indent</h6>
-<button class="minimal-indent">default sexy</button>
-<button class="minimal-indent">green</button>
-<button class="minimal-indent">some button</button>
+<button class="drib white">default sexy</button>
+<button class="drib white">green</button>
+<button class="drib white">some button</button>
