--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" media="all" href="css/dev.css"/>
 
     <!-- jquery cdn and fallback -->
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>-->
     <script>!window.jQuery && document.write('<script src="js/jquery-1.6.1.min.js"><\/script>')</script>
 
     <!-- 
@@ -50,7 +49,7 @@
     <script language="javascript" type="text/javascript">
         $(document).ready(function() {
             //$('#grid').load('sample/_grid.html');
-            $('#typo').load('sample/_typo.html');
+            //$('#typo').load('sample/_typo.html');
             //$('#hgroup').load('sample/_hgroup.html');
             $('#form').load('sample/_form.html');
             $('#button').load('sample/_btn.html');
